--- a/css/movies.css
+++ b/css/movies.css
@@ -2,3 +2,13 @@ h1{
     color: purple;
 }
 
+/*
+    1. Loading
+    2. card to display movie with info
+    3. 3 buttons a) add movie
+                 b) edit movie
+                 c) delete movie
+
+
+
+ */
