pending features edit movie and add movie dynamically

--- a/css/movies.css
+++ b/css/movies.css
@@ -2,11 +2,12 @@ h1{
     color: purple;
 }
 
+
 /*
-    1. Loading
-    2. card to display movie with info
-    3. 3 buttons a) add movie
-                 b) edit movie
+    1. Loading---> Done
+    2. card to display movie with info-->done
+    3. 3 buttons a) add movie---> need o render via form
+                 b) edit movie-->render via form
                  c) delete movie
 
 
