--- a/css/movies.css
+++ b/css/movies.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 h1{
     color: purple;
 }
@@ -6,13 +11,23 @@ h1{
     visibility: visible;
 
 }
-/*
-    1. Loading---> Done
-    2. card to display movie with info-->done
-    3. 3 buttons a) add movie---> need o render via form
-                 b) edit movie-->render via form
-                 c) delete movie
 
+.container {
+    width: 100%;
+}
 
+.mb-3 {
+    width: 100%;
+}
 
- */
+.card-btn {
+    background-color: #000000;
+    color: #FFFFFF;
+    border: solid .5px #FFFFFF;
+    width: 50%;
+    height: 2em;
+}
+
+form {
+    position: fixed;
+}
