--- a/css/movies.css
+++ b/css/movies.css
@@ -1,26 +1,27 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+
 }
 
 h1{
     color: purple;
 }
 
-.show{
-    visibility: visible;
-
-}
-
 .container {
     width: 100%;
+    background-color: #414042;
+    color: #FFFFFF;
+    padding: 0;
+    margin: 0;
 }
 
 .mb-3 {
     width: 100%;
 }
 
-.card-btn {
+.card-btn, #add-movie-btn {
     background-color: #000000;
     color: #FFFFFF;
     border: solid .5px #FFFFFF;
@@ -28,6 +29,23 @@ h1{
     height: 2em;
 }
 
+#add-movie-btn {
+    width: 100%;
+}
+
 form {
     position: fixed;
+    background-color: #414042;
+    color: #FFFFFF;
+}
+
+html, body, .card-body {
+    background-color: #414042;
+    color: #FFFFFF;
+}
+
+.text-background {
+    width: 35%;
+    background-color: #000000;
+    opacity: .5%;
 }
