edit form pending

--- a/css/movies.css
+++ b/css/movies.css
@@ -23,7 +23,7 @@ h1{
 
 .card-btn, #add-movie-btn ,#update-movie-btn{
     background-color: #000000;
-    color: #FFFFFF;
+    color: #b63131;
     border: solid .5px #FFFFFF;
     width: 50%;
     height: 2em;
