added the change in the button for the button-->review and made it responsive by changing top & left in css

--- a/css/movies.css
+++ b/css/movies.css
@@ -31,11 +31,10 @@ h1{
 #add-movie-btn,#update-movie-btn {
     width: 100%;
 }
-
 .form {
     position: fixed;
-    top: 10%;
-    right: 20%;
+    top: 5%;
+    left: 65%;
     width: 25%;
     color: goldenrod;
 }
